--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.25.2",
-    "bcrypt": "^4.0.1",
+    "@apollo/server": "^4.9.3",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "faker": "^4.1.0",
-    "graphql": "^15.5.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.9",
-    "rxjs": "^7.8.0"
+    "graphql": "^16.8.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.1",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
