--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.mjs",
     "watch": "nodemon",
     "seed": "node seeders/seeds.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "nodemon": "^2.0.3"
   }
 }
