--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "dotenv": "^16.3.1"
   }
 }
