--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "mern-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "watch": "nodemon",
     "seed": "node seeders/seeds.js"
   },
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
-    "nodemon": "^2.0.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "nodemon": "^2.0.3"
   }
 }
