--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "mern-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node api/index.js",
     "watch": "nodemon",
     "seed": "node seeders/seeds.js"
   },
