--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,26 @@
 {
-    "version": 2,
-    "builds": [
-     {
-         "src": "./index.js",
-         "use": "@vercel/node"
-     }
-    ]
- }
+  "version": 2,
+  "functions": {
+    "api/*.js": {
+      "maxDuration": 5
+    }
+  },
+
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api"
+    }
+  ],
+  "headers": [
+    {
+        "source": "/",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, s-maxage=1, stale-while-revalidate=59"
+          }
+        ]
+    }
+  ]
+}
